# serper-mcp-server

./: .gitignore  .python-version  README.md  pyproject.toml
.github/workflows/: push-to-pypi.yaml
src/serper_mcp_server/: __init__.py  __main__.py  core.py  enums.py  metrics.py  schemas.py  server.py
tests/: test_core.py  test_metrics.py  test_server.py
